@@ -142,6 +142,8 @@ PIG-1696: Performance: Use System.arraycopy() instead of manually copying the by
 
 BUG FIXES
 
+PIG-1988: Importing an empty macro file causing NPE (rding)
+
 PIG-1977: "Stream closed" error while reading Pig temp files (results of intermediate jobs) (rding)
 
 PIG-1963: in nested foreach, accumutive udf taking input from order-by does not get results in order (thejas)
